--- a/generators/static-lambda/templates/lambda/package.json
+++ b/generators/static-lambda/templates/lambda/package.json
@@ -66,6 +66,6 @@
     ]
   },
   "hooks": {
-    "pre-commit": "pretty-quick --staged"
+    "pre-commit": "pretty-quick --staged; cd ./terraform && terraform fmt"
   }
 }
