--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "json": "^9.0.6",
     "lodash.kebabcase": "^4.1.1",
     "lodash.merge": "^4.6.2",
-    "yeoman-generator": "^4.10.1"
+    "yeoman-generator": "^4.10.1",
+    "@hesto2/config": "^0.0.29"
   },
   "devDependencies": {
-    "@hesto2/config": "^0.0.29",
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
