--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-hesto2",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "files": [
     "generators"
@@ -20,6 +20,5 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
   },
-  "scripts": {
-  }
+  "scripts": {}
 }
