--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "@hesto2/config": "^0.0.29",
     "json": "^9.0.6",
     "lodash.kebabcase": "^4.1.1",
     "lodash.merge": "^4.6.2",
-    "yeoman-generator": "^4.10.1",
-    "@hesto2/config": "^0.0.29"
+    "yeoman-generator": "^4.10.1"
   },
   "devDependencies": {
     "husky": "^4.2.5",
